CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(PROJ "gpredict3-console")

MESSAGE(STATUS "Configuring console project")

CONFIGURE_COMMON(${PROJ})

SET(CONSOLE_RTL_SRC )
ADD_RTL_FILE(CONSOLE_RTL_SRC "qdb_connector.h")
ADD_RTL_FILE(CONSOLE_RTL_SRC "qdb_connector.cpp")

ADD_EXECUTABLE(${PROJ} src/main.cpp ${COMMON_FILES} ${COMMON_DESKTOP_CONSOLE_FILES} ${CONSOLE_RTL_SRC})

TARGET_LINK_LIBRARIES(${PROJ} Qt5::Core Qt5::Sql factory)
TARGET_COMPILE_DEFINITIONS(${PROJ} PUBLIC "-DNOGUI")