CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(PROJ "gpredict3-console")

MESSAGE(STATUS "Configuring console project")

FILE(GLOB SRC_BASE src/*.cpp)

CONFIGURE_COMMON(${PROJ})

SET(CONSOLE_RTL_SRC )
IF (NOT Qt5_DISABLE)
	ADD_RTL_FILE(CONSOLE_RTL_SRC "qdb_connector.h")
	ADD_RTL_FILE(CONSOLE_RTL_SRC "qdb_connector.cpp")
	ADD_UTILS_FILE(CONSOLE_RTL_SRC "QtUtils.cpp")
ENDIF()

SCGMS_ADD_EXECUTABLE(${PROJ} ${SRC_BASE} ${COMMON_FILES} ${COMMON_DESKTOP_CONSOLE_FILES} ${CONSOLE_RTL_SRC})

IF (NOT Qt5_DISABLE)
	TARGET_LINK_LIBRARIES(${PROJ} Qt5::Core Qt5::Sql scgms)
ENDIF()

TARGET_COMPILE_DEFINITIONS(${PROJ} PUBLIC "-DNOGUI")
